--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
 button{
     border: none;
     background: #c77dff;
-    height: 2.5rem;
-    width: 6rem;
+    height: 40px;
+    width: 150px;
     margin: 5px;
     cursor: pointer;
     font-weight: bold;
